# cksonsurum

./: .gitignore  .pre-commit-config.yaml  CACHE_DEDUPE_IMPLEMENTATION_SUMMARY.md  CAPTIONS_README.md  CODE_STYLE_IMPROVEMENTS_SUMMARY.md  CONFIG_IMPROVEMENTS_SUMMARY.md  CONFIG_MIGRATION_README.md  CONTENT_STRATEGIST_README.md  FRONTEND_IMPROVEMENTS_SUMMARY.md  LOGGER_METRICS_README.md  MAIN_IMPROVEMENTS_SUMMARY.md  README.md  README_ENHANCED.md  VIDEO_PROCESSING_IMPROVEMENTS_SUMMARY.md  VISUAL_ASSETS_INTEGRATION_SUMMARY.md  advanced_video_creator.py  auto_captions.py  config.py  content_strategist.py  create_split_zips.ps1  env.txt  env_example.txt  frontend.py  improved_llm_handler.py  logger.py  main.py  production_coordinator.py  pyproject.toml  pytrends_offline.py  requirements.txt  requirements_captions.txt  run_all_channels.ps1  run_finance_today.bat  setup_captions.py  shorts_maker.py  test_captions.py  test_content_strategist.py  test_content_strategist_mock.py  test_simple_rendering.py  test_visual_assets.py  (+1 more)
analysis/: scorer.py
content_pipeline/: __init__.py  advanced_video_creator.py  video_creator.py
core_engine/: improved_llm_handler.py  llm_handler.py
examples/: README.md  pipeline_usage_example.py
outputs/TestChannel/20241201/: metrics.jsonl
outputs/test_channel/20241201/: metrics.jsonl
scripts/: smoke_test.py
thumbnails/: __init__.py  brief.py
